--- a/SisMaper/Views/ViewProdutos.xaml
+++ b/SisMaper/Views/ViewProdutos.xaml
@@ -87,9 +87,17 @@
                             VerticalAlignment="Top">
                             <TextBox.ToolTip>
                                 <StackPanel>
+                                    <TextBlock
+                                        FontWeight="Bold"
+                                        Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                        Text="Filtro Avançado:" />
                                     <TextBlock>
                                         <Run
-                                            Text="Busque pela Descrição, Categoria ou Id" />
+                                            Text="Insira a descrição do produto" />
+                                    </TextBlock>
+                                    <TextBlock>
+                                        <Run
+                                            Text="ou o Código de Barras" />
                                     </TextBlock>
                                 </StackPanel>
                             </TextBox.ToolTip>
